Add MS Graph API proxy
